# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  calc_game.py  even.py  even_game.py  gcd.py  gcd_game.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  logic.py  printing.py
brain_games/scripts/games/: brain_calc.py  brain_even.py
