[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet project 1: 5 different brain games in terminal"
authors = ["Ilya <rasskazov_ilya_98@mail.ru>"]
repository = "https://github.com/rasskazovilya/python-project-49"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Programming Language :: Python :: 3",
	"Environment :: Console",
    "License :: Freely Distributable",
    "Operating System :: OS Independent",
	"Intended Audience :: Education",
]

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
